# Taller-1

./: CMakeLists.txt  Libro.cpp  Libro.h  MaterialBibliografico.cpp  MaterialBibliografico.h  README.md  Revista.cpp  Revista.h  Sistema.cpp  Sistema.h  Usuario.cpp  Usuario.h  main.cpp  materiales.txt  productos.csv  usuarios.txt
